atualizacao de certificados

--- a/index.html
+++ b/index.html
@@ -123,72 +123,58 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing" class="image featured"><img src="images/certificado10.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing" class="image featured"><img src="images/certificado08.png" alt="" /></a>
+                            <h3><a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing">Professional Data Engineer</a></h3>
+                            <p>Google Cloud Plataform.</p>
+                        </article>
+                    </div>
+					<div class="col-4 col-6-medium col-12-small">
+                        <article class="box style2">
+                            <a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing" class="image featured"><img src="images/certificado07.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/14e_tIARXiVrx8bDzssSaZo3dtCs6C595/view?usp=sharing">Fundamentos da Engenharia de Dados</a></h3>
                             <p>DSA - Carga horária: 24h.</p>
                         </article>
                     </div>
 					<div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing" class="image featured"><img src="images/certificado09.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing" class="image featured"><img src="images/certificado06.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing">Descubra a Nuvem AWS</a></h3>
                             <p>DIO - Carga horária: 6h.</p>
                         </article>
                     </div>
 					<div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing" class="image featured"><img src="images/certificado08.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing" class="image featured"><img src="images/certificado05.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing">LM Tech Data Talents</a></h3>
                             <p>Ada Tech - Carga horária: 324h.</p>
                         </article>
                     </div>
-					<div class="col-4 col-6-medium col-12-small">
-                        <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1rWE6i_BvNr_cjhpcMOeggcM-quxqtY25/view?usp=sharing" class="image featured"><img src="images/certificado07.png" alt="" /></a>
-                            <h3><a href="https://drive.google.com/file/d/1rWE6i_BvNr_cjhpcMOeggcM-quxqtY25/view?usp=sharing">Intro to SQL</a></h3>
-                            <p>Kaggle</p>
-                        </article>
-                    </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link" class="image featured"><img src="images/certificado06.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link" class="image featured"><img src="images/certificado04.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1U3ZorsFbvFRN20rA-K01l_5ot85moLtK/view?usp=share_link">Coding Tank</a></h3>
                             <p>Ada Tech - Carga horária: 36h.</p>
                         </article>
                     </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link" class="image featured"><img src="images/certificado05.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link" class="image featured"><img src="images/certificado03.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1GQCJ-9Ww5BQ4SsSvpZdBqCPaHPOM61V-/view?usp=share_link">Excel Impressionador</a></h3>
                             <p>Hashtag - Carga horária: 128h.</p>
                         </article>
                     </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link" class="image featured"><img src="images/certificado04.png" alt="" /></a>
-                            <h3><a href="https://drive.google.com/file/d/1dF4vfxyhuj1MhPPUnOrV3WdX8Xhvy7lB/view?usp=share_link">Simplifica Power Excel</a></h3>
-                            <p>Simplifica - Carga horária: 10h.</p>
-                        </article>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                        <article class="box style2">
-                            <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/certificado03.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link" class="image featured"><img src="images/certificado02.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/15Y8FS_bdRZH0k8IwC0-60t0K21d1My7j/view?usp=share_link">Python para Data Science</a></h3>
                             <p>PA Analytics - Carga horária: 30h.</p>
                         </article>
                     </div>
                     <div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link" class="image featured"><img src="images/certificado02.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link" class="image featured"><img src="images/certificado01.png" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1XajFQbL1YAZT_sXv329k5jz2E2GbEXny/view?usp=share_link">Metodologias Ágeis</a></h3>
                             <p>Escola Conquer - Carga horária: 12h.</p>
-                        </article>
-                    </div>    
-                    <div class="col-4 col-6-medium col-12-small">
-                        <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1HU1MqqDhAonGYVCGZzpWRsp3ZRpuAUYU/view?usp=share_link" class="image featured"><img src="images/certificado01.png" alt="" /></a>
-                            <h3><a href="https://drive.google.com/file/d/1HU1MqqDhAonGYVCGZzpWRsp3ZRpuAUYU/view?usp=share_link">Introdução ao Python</a></h3>
-                            <p>Alfahelix - Carga horária: 2h.</p>
                         </article>
                     </div>
                 </div>
