certificado gcp pde

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
                         <article class="box style2">
-                            <a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing" class="image featured"><img src="images/certificado08.png" alt="" /></a>
+                            <a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing" class="image featured"><img src="images/certificado08.jpeg" alt="" /></a>
                             <h3><a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing">Professional Data Engineer</a></h3>
                             <p>Google Cloud Plataform.</p>
                         </article>
