--- a/projeto02_investidores.html
+++ b/projeto02_investidores.html
@@ -144,6 +144,7 @@ MAIN
 			</p>
 			<p>
 				<li>Qual o total investido em cada ativo?</li>
+				O ativo 4 teve o maior valor total investido, enquanto o ativo 7 teve o menor.
 			</p>
 			<img src="images\projetos\02_11.png">
 			<p>
@@ -151,6 +152,31 @@ MAIN
 				Para os ativos 1, 2, 3, 4, 5 e 6, o menor valor investido foi de R$ 0. O ativo 7, por sua vez, teve como menor valor investido R$ 462,93.
 			</p>
 			<img src="images\projetos\02_12.png">
+			<p>
+				<li>Qual a média de valor investido em cada ativo?</li>
+				O ativo 4 teve o maior valor médio de investimento (R$ 10.505), enquando o ativo 7 teve o menor (R$ 500).
+			</p>
+			<img src="images\projetos\02_13.png">
+			<p>
+				<li>Qual a idade do investidor mais velho?</li>
+				O investidor mais velho tem 51 anos.
+			</p>
+			<p>
+				<li>Quantos investidores são promotores? E quantos são do sexo feminino?</li>
+				3669 investidores são promotores. 19385 investidores são mulheres.
+			</p>
+			<p>
+				<li>Quantos investidores do sexo feminino tem mais de 25 anos e investiram menos de R$ 10.000?</li>
+				442 investidores são mulheres, tem mais de 25 anos e investiram menos de R$ 10.000.
+			</p>
+			<p>
+				<li>Qual é a soma do total investido por cada estado?</li>
+			</p>
+			<img src="images\projetos\02_14.png">
+			<p>
+				<li>Como os investidores se distribuem em promotores, detratores e neutros?</li>
+				Os investidores se dividem em 3669 promotores, 15477 neutros e 19608 detratores.
+			</p>
 		</article>
 	</div>
 </div>
