--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/carolysg/api-weather" class="image featured"><img src="images/projeto05.jpg" alt="" /></a>
-								<h3><a href="https://github.com/carolysg/api-weather">Coleta de dados - API HG Weather</a></h3>
+								<a href="projeto05_previsaotempo.html" class="image featured"><img src="images/projeto05.jpg" alt="" /></a>
+								<h3><a href="projeto05_previsaotempo.html">Coleta de dados - API HG Weather</a></h3>
 								<p>Coleta e processamento de dados do clima de São Carlos (em andamento).</p>
 								<p class="small-font">Python, API, GCP</p>
 							</article>
