--- a/projeto05_previsaotempo.html
+++ b/projeto05_previsaotempo.html
@@ -24,7 +24,7 @@ HEADER
 					<a small href="https://hgbrasil.com/status/weather" target="_blank">Link do site da API</a>
 				</div>
 				<div class="col-md-6 pr-0">
-					<img src="images/projeto05.png">
+					<img src="images/projeto05.jpg">
 				</div>
 			</div>
 		</div>
