--- a/projeto05_previsaotempo.html
+++ b/projeto05_previsaotempo.html
@@ -149,8 +149,20 @@ MAIN
 			</div>
 			<br>
 			<p>
-				Por fim, 
+				Por fim, as tabelas <code>tempo_real</code> e <code>tempo_forecast</code> foram criada no BigQuery e populadas com os dados obtidos pela API.
 			</p>
+			<p>
+				Tabela <code>tempo_real</code>:
+			</p>
+			<img src="images\projetos\05_11.png">
+			<p>
+				Tabela <code>tempo_forecast</code>:
+			</p>
+			<img src="images\projetos\05_10.png">
+			<p>
+				Dessa forma, consultas utilizando a linguagem SQL podem ser feitas para analisar os dados obtidos.
+			</p>
+			<img src="images\projetos\05_12.png">
 		</article>
 	</div>
 </div>
