--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="box style2">
 								<a href="projeto05_previsaotempo.html" target="blank" class="image featured"><img src="images/projeto05.jpg" alt="" /></a>
 								<h3><a href="projeto05_previsaotempo.html" target="blank">Coleta de dados - API HG Weather</a></h3>
-								<p>Coleta e processamento de dados do clima de São Carlos (em andamento).</p>
+								<p>Coleta e processamento de dados do clima de São Carlos.</p>
 								<p class="small-font">Python, API, GCP</p>
 							</article>
 						</div>
