atualizacao projeto selenium

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<a href="https://github.com/carolysg/auto-forms-selenium" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
 					<h3>Automação Web - Selenium</h3>
-					<p>Preenchimento automático de formulários online utilizando Selenium (em andamento).</p>
+					<p>Simulação de compra em site utilizando Selenium.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto03_pinguins.html" class="image fit thumb"><img src="images/thumbs/pinguins.png"
