--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
 					<a href="projeto04_automacao.html" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
 					<h3>Automação Web - Selenium</h3>
-					<p>Preenchimento automático de formulários online utilizando Selenium (em andamento).</p>
+					<p>Simulação de compra em site utilizando Selenium.</p>
 					<div class="tecnologias">
 						<img class="icone" src="images/icons/python.svg">
 						<img class="icone" src="images/icons/se.svg">
