alteracao main css e projeto04

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<p>Coleta e processamento de dados do clima de São Carlos.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://github.com/carolysg/auto-forms-selenium" class="image fit thumb"><img
+					<a href="projeto04_automacao.html" class="image fit thumb"><img
 							src="images/thumbs/selenium.png" alt="" /></a>
 					<h3>Automação Web - Selenium</h3>
 					<p>Simulação de compra em site utilizando Selenium.</p>
