--- a/certificados.html
+++ b/certificados.html
@@ -50,7 +50,12 @@
 			<p>Cursos que já realizei e certificados que possuo.</p>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing" class="image fit thumb no-overlay"><img src="images/certificados/certificado08.jpeg" alt="" /></a>
+					<a href="https://credentials.getdbt.com/09e37c10-89a5-4025-9657-5631c7d0cc6c" class="image fit thumb no-overlay"><img src="images/certificados/certificado09.png" alt="" /></a>
+					<h3>dbt Fundamentals</h3>
+					<p>dbt Labs</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="https://google.accredible.com/7d7f8cab-9fa2-4da3-b55b-514453e456fc" class="image fit thumb no-overlay"><img src="images/certificados/certificado08.jpeg" alt="" /></a>
 					<h3>Professional Data Engineer</h3>
 					<p>Google Cloud Plataform</p>
 				</article>
