--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
 			<h2>Certificados</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1UrI8n1CwYY_RQ4UL9ElmnW6fe9VoQh25/view?usp=sharing"
+					<a href="https://credentials.getdbt.com/09e37c10-89a5-4025-9657-5631c7d0cc6c"
+						class="image fit no-overlay thumb"><img src="images/certificados/certificado09.png" alt="" /></a>
+					<h3>dbt Fundamentals</h3>
+					<p>dbt Labs</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="https://google.accredible.com/7d7f8cab-9fa2-4da3-b55b-514453e456fc"
 						class="image fit no-overlay thumb"><img src="images/certificados/certificado08.jpeg" alt="" /></a>
 					<h3>Professional Data Engineer</h3>
 					<p>Google Cloud Plataform</p>
@@ -104,12 +110,6 @@
 						class="image fit no-overlay thumb"><img src="images/certificados/certificado07.png" alt="" /></a>
 					<h3>Fundamentos da Engenharia de Dados</h3>
 					<p>DSA - Carga horária: 24h</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="https://drive.google.com/file/d/1hfvvRAljAmy757d0Q13ueKk7pcCpU9oL/view?usp=sharing"
-						class="image fit no-overlay thumb"><img src="images/certificados/certificado06.png" alt="" /></a>
-					<h3>Descubra a Nuvem AWS</h3>
-					<p>DIO - Carga horária: 6h</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="https://drive.google.com/file/d/1pchYHEthxNLfwRShU4kUvGMZrbEr2k0h/view?usp=sharing"
