--- a/sobre.html
+++ b/sobre.html
@@ -53,8 +53,8 @@
 				<p><span class="image right no-overlay"><img src="images/img01.png" alt="" /></span>
 					Oie! Meu nome é Carolina, mas pode me chamar de Carol ou de Yumi. Tenho 30 anos, moro em São Carlos - SP.</p>
 
-				<p>Sou engenheira civil pela Universidade Federal de São Carlos (UFSCar) e faço mestrado em engenharia 
-					de transportes na Escola de Engenharia de São Carlos da Universidade de São Paulo (EESC-USP).</p>
+				<p>Sou engenheira civil pela Universidade Federal de São Carlos (UFSCar) e mestra em engenharia 
+					de transportes pela Escola de Engenharia de São Carlos da Universidade de São Paulo (EESC-USP).</p>
 				
 				<p>Trabalho como engenheira de dados e também faço graduação em ciência de dados na Universidade 
 					Virtual do Estado de São Paulo (UNIVESP).</p>
