--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 			<h2>Projetos</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
+					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.jpg"
+							alt="" /></a>
+					<h3>Extração e análise de dados de cervejarias</h3>
+					<p>Dados da API Open Brewery DB.</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto05_previsaotempo.html" class="image fit thumb"><img src="images/thumbs/apihg.jpg"
 							alt="" /></a>
 					<h3>Coleta de dados - API HG Weather</h3>
@@ -76,12 +82,6 @@
 							alt="" /></a>
 					<h3>Pinguins</h3>
 					<p>Projeto de análise de características de pinguins. Fonte: Kaggle.</p>
-				</article>
-				<article class="col-6 col-12-xsmall work-item">
-					<a href="projeto02_investidores.html" class="image fit thumb"><img
-							src="images/thumbs/investidores.png" alt="" /></a>
-					<h3>Investidores</h3>
-					<p>Projeto final do módulo Técnicas de Programação I da formação em Python e Dados da Ada Tech.</p>
 				</article>
 			</div>
 			<ul class="actions">
