--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,19 @@
 			<h2>Projetos</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
+					<a href="projeto06_breweries.html" class="image fit thumb"><img src="images/thumbs/cervejaria.jpg"
+							alt="" /></a>
+					<h3>Extração e análise de dados de cervejarias</h3>
+					<p>Dados da API Open Brewery DB.</p>
+					<div class="tecnologias">
+						<img class="icone" src="images/icons/python.svg">
+						<img class="icone" src="images/icons/pandas.svg">
+						<img class="icone" src="images/icons/numpy.svg">
+						<img class="icone" src="images/icons/airflow.svg">
+						<img class="icone" src="images/icons/postgre.svg">
+					</div>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
 					<a href="projeto05_previsaotempo.html" class="image fit thumb"><img src="images/thumbs/apihg.jpg"
 							alt="" /></a>
 					<h3>Coleta de dados - API HG Weather</h3>
